@@ -25,7 +25,8 @@ similar to chord syntax")
 			   "experimental mechanism for remembering tweaks")
 	      (resolution 101 "resolution for generating bitmaps")
 	      (anti-alias-factor 1 "render at higher resolution and scale down result\nto prevent jaggies in PNG")
-	      (preview-include-book-title #t "include book-titles in preview images.")
+	      (book-title-preview #t "include book-titles in preview images.")
+	      (eps-font-include #f "Include fonts in separate-system EPS files.")
 	      (gs-font-load #f
 			    "load fonts via Ghostscript.")
 	      (gui #f "running from gui; redirect stderr to log file")
